	* Composite images now can have alpha transparency, when background is non-opaque
	* Background layer now can use transparency like any other layer
	* Background layer position now can be changed via Ctrl+arrows or layers window spinbuttons, like any other layer
	* Patterns for colours A and B can now be chosen separately (Preferences->General->Separate patterns for A&B)
	* Builtin Bayer patterns now can be redefined : See handbook section A.4.3 for details
	* Colour transform and source selection added to blend mode options
	* "Saturate more" blend mode redefined to not ignore source (previous behaviour available with "Image" source selected)
	* Lasso tool can be configured to shrink selection based on the selection channel - right click the tool icon
	* Clone tool is now continuous
	* Clone tool can be configured to work in unaligned mode - right click the tool icon
	* Ctrl+Left click now positions clone source when using clone tool
	* Ctrl+Right click now deletes last point when making polygonal selection (from a closed polygon, deletes the point nearest to cursor)
	* Shift and Shift+Ctrl now constrain selection box width/height when resizing it by clicking and dragging
	* Arrow keys can now be used for scrolling (Preferences->Interface->Arrow keys scroll canvas)
	* Zooming now can use mouse cursor position as its fixed point (Preferences->Interface->Zoom on cursor position)
	* Scroll wheel zoom now works for view window too
	* Zoom is now up to 8000%
	* "Hide image" and "View alpha as an overlay" can now be toggled separately for each layer (Preferences->General->Enable overlays by layer)
	* Colours A and B now highlighted in palette window
	* New image format PMM (Portable MultiMap) added for interoperable storage and exchange of images : See handbook section A.2.4 for details
	* WebP file format save/load added
	* XPM files with 65-92 colours are now saved with smaller size